		and James Obeirne <james.obeirne@gmail.com>
	To save some memory, GP terminals share the same (size-zero) child array.
		The array is in GPNodeConstraints to be serializable.  That means there
		are a few of the arrays, but it doesn't matter.
	MultiObjectiveFitness allows the user to specify whether the objectives are
		to be maximized (default) or minimized.  This does not affect any piece
		of code working previously.
	SPEA2 code has suffered multiple changes.  We believe that at this point it
		behaves exactly as described in Zitzler's 2001 paper. Any previously working 
		code using this package should still work, but you won't be able to 
		replicate previous results.  Other than minor changes, refactoring and 
		some optimizations, the biggest change is in the density function 
		(which, again, is now fully compliant with Zitzler's specifications).
	Added SPEA2Statistics; it prints the objective values of all individuals in the final 
		Pareto front.
	Added ec.app.mookenchmarks, consiting of a number of popular Multi Objective Optimization 
		benchmark problems and the a params file.
	Bug fix to shuffling algorithm used in SUSSelection. We stopped one element too early,
		so for small arrays the shuffling is non-uniform (and for size-two arrays
  		there was no shuffling at all).  Gagh.  For shuffling large numbers of items,
		the effect was minimal.
	Refactoring in MultiObjectiveFitness:
		-parameter "num-objectives" was renamed "num-objectives"
	Refactoring in ec.app.moobenchmarks to make it similar to ecsuite:
		-package was renamed moosuite,
		-parameter "numvariables" was dropped, set the genome size instead.
		-genome consists of doubles instead of floats (DoubleVectorIndividual)
		-all problems were grouped  into one class: MooSuite.java
		-new benchmark problems added: SCH, F2, F3(unconstrained), KUR, FON, QV, POL.
	Minor modification to ECSuite.java: P_... changed to V_... to be consistent